added search script and db generator

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@ kanjivg.xml
 *.pyc
 kanjivg-*xml.gz
 kanjivg-*.zip
+
+build/
+kanji_freq/*/*.zip
+Session.vim
+decompositions.db
+notes.txt
+kanji_freq/aozora/
+kanji_freq/jpdb/
